[project]
name = "fft-viz"
version = "0.6.0"
description = "A high-quality FFT visualization tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imgui-bundle",
    "loguru",
    "nfdpy",
    "numpy",
    "pydantic",
    "pyviewer-extended",
    "radpsd",
    "torch",
    "torchvision",
]

[tool.uv.sources]
nfdpy = { git = "https://github.com/ShineiArakawa/nfdpy.git" }
pyviewer-extended = { git = "https://github.com/ShineiArakawa/pyviewer-extended.git" }
radpsd = { git = "https://github.com/ShineiArakawa/radpsd.git" }
